--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,19 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.9
-loader_version=0.11.2
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.24
+loader_version=0.11.6
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.1.0
 maven_group=com.red.masaadditions
 archives_base_name=masaadditions
 
 # Dependencies
-tweakeroo_fileid=3224921
-minihud_fileid=3101187
-litematica_fileid=3349118
-malilib_fileid=3252979
-masa_minecraft_version=1.16.4
-fabric_version=0.25.1+build.416-1.16
+tweakeroo_fileid=3383609
+minihud_fileid=3379923
+litematica_fileid=3387062
+malilib_fileid=3387061
+masa_minecraft_version=1.17.1
+fabric_version=0.37.0+1.17
