--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.24
-loader_version=0.11.6
+minecraft_version=1.18-rc3
+yarn_mappings=1.18-rc3+build.1
+loader_version=0.12.5
 
 # Mod Properties
 mod_version=1.1.0
@@ -17,4 +17,4 @@ minihud_fileid=3379923
 litematica_fileid=3387062
 malilib_fileid=3387061
 masa_minecraft_version=1.17.1
-fabric_version=0.37.0+1.17
+fabric_version=0.43.1+1.18
