--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
     // Masa's Mods
     modImplementation "curse.maven:tweakeroo-${project.masa_minecraft_version}-297344:${project.tweakeroo_fileid}"
-    modImplementation "curse.maven:minihud-${project.masa_minecraft_version}-244260:${project.minihud_fileid}"
+    modImplementation "curse.maven:minihud-1.17.1-244260:${project.minihud_fileid}"
     modImplementation "curse.maven:litematica-${project.masa_minecraft_version}-308892:${project.litematica_fileid}"
     modImplementation "curse.maven:malilib-${project.masa_minecraft_version}-303119:${project.malilib_fileid}"
 
