--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.18-rc3
-yarn_mappings=1.18-rc3+build.1
-loader_version=0.12.5
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.9
+loader_version=0.12.12
 
 # Mod Properties
 mod_version=1.1.0
@@ -12,9 +12,9 @@ maven_group=com.red.masaadditions
 archives_base_name=masaadditions
 
 # Dependencies
-tweakeroo_fileid=3383609
+tweakeroo_fileid=3577319
 minihud_fileid=3379923
-litematica_fileid=3387062
-malilib_fileid=3387061
-masa_minecraft_version=1.17.1
-fabric_version=0.43.1+1.18
+litematica_fileid=3545947
+malilib_fileid=3544210
+masa_minecraft_version=1.18.0
+fabric_version=0.45.0+1.18
