--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ buildscript {
 }
 
 plugins {
-    id 'fabric-loom' version '0.8-SNAPSHOT'
+    id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -19,10 +19,6 @@ group = project.maven_group
 repositories {
     maven { url "https://www.cursemaven.com" }
     maven { url "https://masa.dy.fi/maven" }
-}
-
-minecraft {
-    accessWidener = file("src/main/resources/masaadditions.aw")
 }
 
 dependencies {
